[project]
name = "pyobs-zwoeaf"
version = "2.0.0.dev8"
description = "pyobs model for ZWO EAF focus motors"
authors = [
    { name = "Lennart Jonas Buhrke", email = "l.buhrke@stud.uni-goettingen.de" },
    { name = "Tim-Oliver Husser", email = "thusser@uni-goettingen.de" },
]
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
    "pyobs-core>=2.0.0.dev6,<3",
]

[dependency-groups]
dev = [
    "pre-commit>=3.3.3,<4",
    "pyrefly>=0.16",
    "ruff>=0.9.0",
]

[project.scripts]
pyobs-zwoeaf = "pyobs_zwoeaf.cli:main"

[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/pyobs_zwoeaf"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "G"]

[tool.pyrefly]
python-version = "3.11"
